# kontainer-core

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-alpine  Dockerfile-dev  Dockerfile-dev-alpine  README.md  agent.py  celery_worker.sh  docker-compose.yaml  docker-compose.yml  docker-http.py  docker_build.sh  docker_run.sh  docker_run_dev.sh  kontainer.py  main.py  pyproject.toml  requirements.in
.github/workflows/: publish.yml
docker/: entrypoint-alpine.sh  entrypoint.sh
docker/alpine/nginx/: nginx.conf  nginx.original.conf
docker/alpine/redis/: redis.original.conf
docker/alpine/supervisor/: supervisord.conf
docker/nginx/: default.conf  gunicorn_docker.conf  site.default.conf
docker/nginx/conf.d/: ssl.conf
docker/supervisor/: app.ini  celery_worker.conf  celery_worker.ini  nginx.ini  redis.ini
src/: wsgi.py
src/dockerhttp/docker/: test_client.py
src/dockerhttp/projects/: projectmanager.py
src/dockerhttp/server/: app.py  container_api.py  images_api.py  networks_api.py  projects_api.py  volumes_api.py
src/kontainer/: app.py  celery.py  settings.py  srv.py
src/kontainer/admin/: auth.py  credentials.py  registries.py  tasks.py  templates.py
src/kontainer/docker/: context.py  dkr.py  helper.py  manager.py  service.py  tasks.py
src/kontainer/environments/: envmanager.py
src/kontainer/server/: error_middleware.py  middleware.py
src/kontainer/stacks/: __init__.py  docker.py  dockerstacks.py  initializer.py  stackfile.py  stacksmanager.py  sync.py  tasks.py
src/kontainer/util/: composefile_util.py  docker_mcp_util.py  docker_plugins_util.py  dockercli_utils.py  git_util.py  rdocker_util.py  remote_utils.py  rgit_util.py  subprocess_util.py  system_util.py  yaml_util.py
src/kstack/agent/: app.py  celery.py  dkr.py  error.py  settings.py  srv.py
(+76 files in other folders)
