[tool.poetry]
name = "kstack-agent"
version = "0.1.0"
description = ""
authors = ["fm-labs <flowmotionlabs@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
flask = "^3.0.0"
flask-cors = "^5.0.0"
docker = "^7.0.0"
paramiko = "^3.5.0"
gevent = "^24.11.1"
flask-socketio = "^5.5.1"
websocket = "^0.2.1"
websocket-client = "^1.8.0"
psutil = "^6.1.1"
gitpython = "^3.1.44"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
coverage = "^7.3.2"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
