[tool.poetry]
name = "kstack-agent"
version = "0.8.1"
description = ""
authors = ["fm-labs <flowmotionlabs@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
flask = "^3.1.0"
flask-cors = "^5.0.0"
docker = "^7.0.0"
paramiko = "^3.5.0"
gevent = "^24.11.1"
flask-socketio = "^5.5.1"
websocket = "^0.2.1"
websocket-client = "^1.8.0"
gitpython = "^3.1.44"
gunicorn = "^23.0.0"
kubernetes = "^32.0.0"
redis = "^5.2.1"
celery = "^5.4.0"
flask-jwt-extended = "^4.7.1"
flask-sqlalchemy = "^3.1.1"
boto3 = "^1.37.13"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
coverage = "^7.3.2"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
