[project]
name = "kontainer-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
authors = [
  { name = "fm-labs", email = "flowmotionlabs@gmail.com" },
  { name = "mstvb", email = "manuel.staufervb@gmail.com" }
]

[tool.uv]
package = false